# cya-back

./: .gitignore  Account Details.csv  Ad-Hoc Calculations.csv  Arvid.ipynb  Dockerfile  FinancialSample.csv  InvestmentLog(EFFEC 02_02_2013) (1).xls  InvestorResearch.ipynb  LoadInvestorsChroma.ipynb  Manifesto.ipynb  Statement Values.csv  Steimle.xls  Transactions(new as of 8-18-15).csv  Transactions(old).csv  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  WebScraper.ipynb  build.sh  django_kernel.py  docker-compose.yaml  notebook.ipynb  pyproject.toml  render.yaml  report.csv  test.mp4.REMOVED.git-id  test.sql  text.mp3.REMOVED.git-id
agi/: agent.py  apps.py  models.py  tasks.py  urls.py  views.py
agi/migrations/: 0001_initial.py  0002_auto_20231213_0445.py  (+3 more)
backend/: asgi.py  celery.py  settings.py  urls.py
chat/: enums.py  models.py  service.py  urls.py  views.py
chat_websockets/: apps.py  consumers.py  routing.py
cli/: models.py  service.py  tasks.py  urls.py  views.py
client/: models.py  urls.py  views.py
coach/: consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
cofounder/: apps.py  models.py  tasks.py  urls.py  views.py
content/: audio.py  converter.py  crawler.py  rss.py  scraper.py  snippets.py  transcriber.py  youtube.py
copyai/: apps.py  copyai.py
crawler/: models.py  service.py  tasks.py
creator_services/: apps.py  urls.py  views.py
decisions/: models.py  service.py
doctest-output/: conversation.gv
document/: service.py  urls.py  views.py
embeddings/: documents.py  vectorstore.py
experiments/: models.py  service.py  urls.py  views.py
leoai/: content.py  notion.py  prompts.py  rag.py  tasks.py  urls.py  views.py  youtube.py
lobow/: apps.py  content.py  prompts.py  urls.py  views.py
metrics/: tasks.py
personal/: tasks.py
podcast/: models.py  podscan.py  tasks.py  urls.py  views.py
prelo/: apps.py  events.py  models.py  tasks.py  urls.py  views.py
search/: add.py  models.py  save.py  tasks.py  urls.py  views.py
spark/: manage.py  tasks.py  urls.py  views.py
submind/: apps.py  models.py  tasks.py  urls.py  views.py
talkhomey/: apps.py  crawl.py  models.py  tasks.py  urls.py  vectorstore.py  views.py
task/: models.py  service.py  urls.py  views.py
toolkit/: models.py  tasks.py  urls.py  views.py
users/: models.py  urls.py  views.py
(+286 files in other folders)
